--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											<a href="#" class="image"><img src="images/iowa.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #2: A/B Testing on Housing in Iowa</h4>
-												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://drive.google.com/drive/u/0/folders/1BxmKHRmytAWNzOcfVtsW4pEwvbsG9jfc">Capstone #2: A/B Testing Capstone</a></p>
+												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://drive.google.com/drive/folders/1BxmKHRmytAWNzOcfVtsW4pEwvbsG9jfc?usp=sharing">Capstone #2: A/B Testing Capstone</a></p>
 											</div>
 										</article>
 										<article>
@@ -106,8 +106,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/tableaudashboard.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #3: Coming Soon</h4>
-												<p>Expected in November 2020<br><a href="">TBA</a></p>
+												<h4>Python Mini Project #1: SQL and Viz</h4>
+												<p>Expected in November 2020<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
 									</div>
 								</div>
 							</section>
