--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/tableaudashboard.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Python Mini Project #1: SQL & Python</h4>
-												<p>Python Mini Project using a SQL database to visualize statistical tests<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
+												<h4>Python Mini-Project #1: SQL & Python</h4>
+												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
 									</div>
 								</div>
 							</section>
