--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/tableaudashboard.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Python Mini-Project #1: SQL & Python</h4>
 												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
