--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Python Mini-Project #1: SQL & Python</h4>
-												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
+												<h4>Capstone #3: Python and T-Test with Sephora</h4>
+												<p>Final capstone project with Thinkful around Sephora products. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Capstone_3_Sephora.ipynb">Capstone #3: Sephora & Python</a></p>
 											</div>
 								</div>
 							</section>
