--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Python Mini-Project: SQL & Python</h4>
-												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://drive.google.com/drive/folders/1sViEYcbrx6wgubSnPfLGYav8fb22fMR4?usp=sharing">Mini Project #1: Python</a></p>
+												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/Visulizations_MiniProject_Kat_Goodman.ipynb">Mini Project #1: Python</a></p>
 											</div>
 										</article>
 										<article>
