--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											<a href="#" class="image"><img src="images/iowa.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #2: A/B Testing on Housing in Iowa</h4>
-												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://drive.google.com/drive/folders/1BxmKHRmytAWNzOcfVtsW4pEwvbsG9jfc?usp=sharing">Capstone #2: A/B Testing Capstone</a></p>
+												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://github.com/katgoodman/kat/blob/main/Kat%20Goodman_AB%20Testing%20Presentation_Thinkful.pdf">Capstone #2: A/B Testing Capstone</a></p>
 											</div>
 										</article>
 										<article>
