--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 											<a href="#" class="image"><img src="images/lariat.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #1: Lariat and Excel</h4>
-												<p>Predictive modeling for a car company to help them improve their sales and profit in the upcoming fiscal year<br><a href="https://drive.google.com/drive/folders/1lGgzOeRNHd-SBRgWTxqJPmK4iBeTS1H7?usp=sharing">Capstone #1: Lariat</a></p>
+												<p>Predictive modeling for a car company to help them improve their sales and profit in the upcoming fiscal year<br><a href="https://github.com/katgoodman/kat/blob/main/Kat%20Goodman_Excel%20Dashboard%20Presentation_Thinkful.pdf">Capstone #1: Lariat</a></p>
 											</div>
 										</article>
 										<article>
