--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #3: Python and T-Tests with Sephora</h4>
 												<p>Final capstone project with Thinkful around Sephora products. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Capstone_3_Sephora.ipynb">Capstone #3: Sephora & Python</a></p>
