--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/tableaudashboard.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/superstore_tableau.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Tableau Mini-Project: Superstore Strategic Dashboard</h4>
 												<p>Dashboard for the Superstore Dataset, created with Excel and Tableau<br><a href="https://public.tableau.com/profile/katgoodman#!/vizhome/ThinkfulSuperstoreStrategicDashboard_16000355485790/Strategic">Project: Tableau Dashboard</a></p>
