--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
 											</div>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/test_sql.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>SQL Exam</h4>
+												<p>SQL Exam from Thinkful to test SQL knowledge<br><a href="https://github.com/katgoodman/kat/blob/main/KatGoodman_selfsufficiencyexam.sql">SQL Exam</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Python Mini-Project: SQL & Python</h4>
