--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #3: Python and T-Tests with Sephora</h4>
-												<p>Final capstone project with Thinkful around Sephora products. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Capstone_3_Sephora_Github.ipynb">Capstone #3: Sephora & Python</a></p>
+												<h4>Capstone #3: Sephora and Customer Behavior</h4>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Capstone_3_Sephora_Github.ipynb">Capstone #3: Sephora & Python</a></p>
 											</div>
 								</div>
 							</section>
