--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #3: Sephora and Customer Behavior</h4>
-												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Sephora_%26_Customer_Behavior_Capstone_3_Kat_Goodman.ipynb">Capstone #3: Sephora & Python</a></p>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Sephora_%26_Customer_Behavior_Capstone_3_Kat_Goodman.ipynb">Capstone #3: Sephora & Python</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Capstone%203.pdf">Capstone #3: Sephora & Python Presentation</a></p>
 											</div>
 								</div>
 							</section>
