--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Python Mini-Project: SQL & Python</h4>
-												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/Visulizations_MiniProject_Kat_Goodman.ipynb">Mini Project #1: Python</a></p>
+												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/seaborn_and_pandas_Mini_Project.ipynb">Mini Project #1: Python</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #3: Sephora and Customer Behavior</h4>
-												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Sephora_%26_Customer_Behavior_Capstone_3_Kat_Goodman_update.ipynb">Capstone #3: Sephora & Python</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Capstone #3: Sephora & Python Presentation</a></p>
+												<h4>Capstone #3: Customer Behavior at Sephora</h4>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Capstone #3: Customer Behavior at Sephora (Presentation)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Capstone #3: Customer Behavior at Sephora Presentation</a></p>
 											</div>
 								</div>
 							</section>
