--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Capstone #3: Customer Behavior at Sephora</h4>
-												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Capstone #3: Customer Behavior at Sephora (Presentation)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Capstone #3: Customer Behavior at Sephora Presentation</a></p>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Capstone #3: Customer Behavior at Sephora (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Capstone #3: Customer Behavior at Sephora Presentation</a></p>
 											</div>
 								</div>
 							</section>
