--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Python Mini-Project: SQL & Python</h4>
+												<h4>Python Mini-Project: seaborn & pandas Housing Visualization</h4>
 												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/seaborn_and_pandas_Mini_Project.ipynb">Mini Project #1: Python</a></p>
 											</div>
 										</article>
