--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 											<a href="#" class="image"><img src="images/bargraph_sql.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Python Mini-Project: seaborn & pandas Housing Visualization</h4>
-												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/seaborn_and_pandas_Mini_Project.ipynb">Mini Project #1: Python</a></p>
+												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/seaborn_and_pandas_Mini_Project.ipynb">seaborn & pandas Housing Visualization</a></p>
 											</div>
 										</article>
 										<article>
