--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/lariat.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #1: Lariat and Excel</h4>
-												<p>Predictive modeling for a car company to help them improve their sales and profit in the upcoming fiscal year<br><a href="https://github.com/katgoodman/kat/blob/main/Rental%20Car%20Revenue%20in%202018.pdf">Capstone #1: Lariat</a></p>
+												<h4>Rental Car Revenue</h4>
+												<p>Predictive modeling for a car company to help them improve their sales and profit in the upcoming fiscal year<br><a href="https://github.com/katgoodman/kat/blob/main/Rental%20Car%20Revenue%20in%202018.pdf">Rental Car Revenue</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/iowa.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #2: A/B Testing on Housing in Iowa</h4>
-												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://github.com/katgoodman/kat/blob/main/Kat%20Goodman_AB%20Testing%20Presentation_Thinkful.pdf">Capstone #2: A/B Testing Capstone</a></p>
+												<h4>A/B Testing on Housing in Iowa</h4>
+												<p>A/B testing model with six different hypotheses using a dataset from Iowa<br><a href="https://github.com/katgoodman/kat/blob/main/Kat%20Goodman_AB%20Testing%20Presentation_Thinkful.pdf">A/B Testing Capstone</a></p>
 											</div>
 										</article>
 										<article>
@@ -120,8 +120,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Capstone #3: Customer Behavior at Sephora</h4>
-												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Capstone #3: Customer Behavior at Sephora (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Capstone #3: Customer Behavior at Sephora Presentation</a></p>
+												<h4>Customer Behavior at Sephora</h4>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Customer Behavior at Sephora (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Customer Behavior at Sephora Presentation</a></p>
 											</div>
 								</div>
 							</section>
