--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 									<p>Check out some projects from my time with Thinkful and some personal projects. Each project has a link. </p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Customer Behavior at Sephora</h4>
+												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Customer Behavior at Sephora (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Customer Behavior at Sephora Presentation</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/lariat.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Rental Car Revenue</h4>
