--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
 									<p>Check out some projects from my time with Thinkful and some personal projects. Each project has a link. </p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/pexels-anna-shvets-3786120.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>DS4A: Assessing COVID-19 Infection Rates in Urban and Low Income Counties</h4>
+												<p>Correlation One’s Data Science for All (DS4A) presentation with Team 126 on COVID-19 infection rates. Data cleaned and hypotheses tested with Python Hypotheses.<br><a href="https://github.com/katgoodman/kat/blob/main/DS4A_Team_126_Assessing_COVID_19_Infection_Rates_cases.ipynb">COVID-19 Infection Rates  (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/DS4A%20COVID-19%20Infection%20Rates%20Final%20Presentation.pdf">COVID-19 Infection Rates (presentation)</a><br><a href="https://github.com/katgoodman/kat/blob/main/DS4A%20COVID19%20Infection%20Rates_Datafolio.pdf">COVID-19 Infection Rates (datafolio)</a></p>
+											</div>
+										<article>
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Customer Behavior at Sephora</h4>
