--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
 												<p>Correlation One’s Data Science for All (DS4A) presentation with Team 126 on COVID-19 infection rates. Data cleaned and hypotheses tested with Python Hypotheses.<br><a href="https://github.com/katgoodman/kat/blob/main/DS4A_Team_126_Assessing_COVID_19_Infection_Rates_cases.ipynb">COVID-19 Infection Rates  (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/DS4A%20COVID-19%20Infection%20Rates%20Final%20Presentation.pdf">COVID-19 Infection Rates (presentation)</a><br><a href="https://github.com/katgoodman/kat/blob/main/DS4A%20COVID19%20Infection%20Rates_Datafolio.pdf">COVID-19 Infection Rates (datafolio)</a></p>
 											</div>
 										<article>
+											<a href="#" class="image"><img src="images/Predictability Model.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Measure of Music: The Music 8 Ball, A Success Predictability Model</h4>
+												<p>Measure of Music’s 1st webinar from 2021. My team focused on building a predictability model to forecast the success of up and coming groups in comparison to their predecessors. Data provided by Chartmetric and Spotify. Data cleaned and hypotheses tested with Python and APIs. Hypotheses.<br><a href="https://github.com/katgoodman/kat/blob/main/Measure_of_Music_The_Music_8_ball%2C_A_Success_Predictability_Model.ipynb">The Music 8-Ball  (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Team%2011_%20Measure%20of%20Music%20-%20The%20Music%208-ball_%20A%20Success%20Predictability%20Model.pdf">The Music 8-Ball (presentation)
+</a></p>
+											</div>
+										<article>
 											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Customer Behavior at Sephora</h4>
@@ -129,13 +136,7 @@
 												<h4>Python Mini-Project: seaborn & pandas Housing Visualization</h4>
 												<p>Python mini project using a SQL database to visualize statistical tests<br><a href="https://github.com/katgoodman/kat/blob/main/seaborn_and_pandas_Mini_Project.ipynb">seaborn & pandas Housing Visualization</a></p>
 											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/sephora_capstone.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Customer Behavior at Sephora</h4>
-												<p>Final capstone project with Thinkful around Sephora products and customers' behaviors. Hypotheses were tested with Python. <br><a href="https://github.com/katgoodman/kat/blob/main/Customer_Behavior_at_Sephora.ipynb">Customer Behavior at Sephora (Notebook)</a><br><a href="https://github.com/katgoodman/kat/blob/main/Sephora%20%26%20Customer%20Behavior_Kat%20Goodman_Github.pdf">Customer Behavior at Sephora Presentation</a></p>
-											</div>
+									
 								</div>
 							</section>
 
